# SIP_interview_Agent

./: .gitignore  README.md  arch.py  dsa_client.py  prompts.txt  pyproject.toml  resumeMD.py
DSA_Agent/: README.md  package-lock.json  package.json  server.js
DSA_Agent/config/: openai.js
DSA_Agent/data/: dsa.csv
DSA_Agent/modules/: evaluator.js  questions.js  sessionStore.js
DSA_Agent/stages/: approach.js  askQuestion.js  code.js  dryrun.js  optimize.js  pseudocode.js  userTestcase.js
DSA_Agent/utils/: logger.js
SIP_Interview_Agent/: .gitignore  README.md  arch.py  dsa_client.py
SIP_Interview_Agent/baml_src/: prompts.baml
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  prompts.baml
